--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 
 [defaults]
 hostfile = hosts
-private_key_file = /home/sabash/Desktop/raguraman.pem
+private_key_file =raguraman.pem
 host_key_checking = False
 
