--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,5 +2,5 @@
 [defaults]
 hostfile = hosts
 private_key_file = /home/ubuntu/Desktop/raguraman.pem
-host_key_checking = False
+ansible_host_key_checking = False
 
